...

  static const double _buttonWidth = 196;

  @override
  Widget build(BuildContext context) {
    return AppButton(
      key: const ValueKey('create_secret_phrase_primary_button'),
      onPressed: !isPreparing ? onPrimaryPressed : null,
      variant: AppButtonVariant.primary,
      minWidth: _buttonWidth,
      trailing: const AppIcon(AppIcons.chevronForward),
      child: Text(revealed ? 'Continue' : 'Reveal the phrase'),
    );
...
